# CS_RayTracer

./: CMakeLists.txt  CMakeLists.txt~  README.md
data/model/: ear.blend
data/model/final/: ear.mtl  ear2.mtl
data/shader/: basecompute.glsl  fragment.glsl  raytracercompute.glsl  vertex.glsl
data/shader/raytrace/: brdf.glsl  common.glsl  final.glsl  final.glsl~  head.glsl  intersect.glsl  octree.glsl  raytrace.glsl  raytrace2.glsl
program/: CMakeLists.txt  main.cpp
src/: Parser.cpp  Parser.h  readme.txt
src/common/: defines.h  helper.cpp  helper.h  scene.cpp  scene.h  singleton.h
src/io/: parser.cpp  parser.h  stringutils.cpp  stringutils.h
src/math/: matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
src/octree/: Node.h  Octree.cpp  Octree.h  tritest.cpp
src/primitives/: Couleur.cpp  Couleur.h  Cst.cpp  Cst.h  Intersection.cpp  Intersection.h  Lumiere.cpp  Lumiere.h  MathUtils.h  Matrice4.cpp  Matrice4.h  Plan.cpp  Plan.h  Quadrique.cpp  Quadrique.h  Rayon.cpp  Rayon.h  Singleton.h  Triangle.cpp  Triangle.h  Vecteur3.cpp  Vecteur3.h  light.cpp  light.h  primitive.cpp  primitive.h  surface.cpp  surface.h
src/render/: camera.cpp  camera.h  defines.h  helper.cpp  helper.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  shadermanager.cpp  shadermanager.cpp~  shadermanager.h  shadermanager.h~
test/: CMakeLists.txt  basiccore.cpp  basicwindow.cpp  loadscene.cpp
